Complete Classification Analysis

--- a/Predict Customer Personality to Boost Marketing Campaign by Using Machine Learning/Predict Customer Personality to Boost Marketing Campaign by Using Machine Learning (Classification).ipynb
+++ b/Predict Customer Personality to Boost Marketing Campaign by Using Machine Learning/Predict Customer Personality to Boost Marketing Campaign by Using Machine Learning (Classification).ipynb
@@ -23,7 +23,7 @@
         "import matplotlib.pyplot as plt\n",
         "pd.set_option('display.max_columns', None)\n",
         "\n",
-        "df = pd.read_csv('/content/drive/MyDrive/marketing_campaign_data.csv')"
+        "df = pd.read_csv('https://raw.githubusercontent.com/mchosasih99/dataset/main/marketing_campaign_data.csv')"
       ]
     },
     {
