Complete Analysis on Jupyter Notebook

--- a/Investigate Hotel Business using Data Visualization/Investigate Hotel Business using Data Visualization.ipynb
+++ b/Investigate Hotel Business using Data Visualization/Investigate Hotel Business using Data Visualization.ipynb
@@ -55,7 +55,7 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "\n",
-        "df = pd.read_csv('/content/drive/MyDrive/hotel_bookings_data.csv')"
+        "df = pd.read_csv('https://raw.githubusercontent.com/mchosasih99/dataset/main/hotel_bookings_data.csv)"
       ]
     },
     {
